se modifico el archivo index.html y se agrego un archivo de css nuevo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>hello</title>
   </head>
   <body>
-    <p>giovanni jorge</p>
+    <p>Giovani jorge</p>
+    <h1>como estan?</h1>
   </body>
 </html>
